--- a/angular.json
+++ b/angular.json
@@ -30,9 +30,19 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/prismjs/themes/prism-okaidia.css",
+              "node_modules/prismjs/plugins/line-numbers/prism-line-numbers.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/marked/marked.min.js",
+              "node_modules/prismjs/prism.js",
+              "node_modules/prismjs/components/prism-css.min.js" ,
+              "node_modules/prismjs/components/prism-cshtml.min.js" ,
+              "node_modules/prismjs/components/prism-typescript.min.js" ,
+              "node_modules/prismjs/components/prism-javascript.min.js" ,
+              "node_modules/prismjs/plugins/line-numbers/prism-line-numbers.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -100,5 +110,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "99bfba1c-c8d8-4ff0-825f-8dd540f37c06"
   }
 }
